<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleChange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/changeNameHint"
        android:textAlignment="center"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/etNameToChange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:ems="10"
        android:hint="@string/changeName"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btChangeNameDatabase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/editName" />


</LinearLayout>